update AutoAnchor.java
- Somewhat better placing calculations. I don't see myself doing damage calculations anytime soon

 - Added inventory mode. Three swapping modes :)
 – code cleanup

added swapUtils.java

Inventory swap methods. All credits to blackout development

some other stuff